# cu_ml_comp

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  STABILITY_ANALYSIS.md  main.ipynb  main.py  pyproject.toml  submission.csv
__marimo__/session/: main.py.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
